--- a/examples/nRF24L01+/Makefile
+++ b/examples/nRF24L01+/Makefile
@@ -1,6 +1,9 @@
 PROG=	nrf
 
 SRCS+=	nRF24L01plus.c
-SRCS+=	test.c
+# SRCS+=	test.c
+# SRCS+=	test_btle.c
+SRCS+=	test_read.c
+USE=	usb
 
 include ../../toolchain/mchck.mk
