--- a/examples/nRF24L01+/Makefile
+++ b/examples/nRF24L01+/Makefile
@@ -1,12 +1,14 @@
 PROG=	nrf
 
 SRCS+=	nRF24L01plus.c
+# SRCS+=	nrf.c
 
+SRCS+= scanner.c
 # SRCS+=	test.c
-
+# SRCS+=	test_simple.c
 # SRCS+=	test_btle.c
+# SRCS+=	test_read.c
 
-SRCS+=	test_read.c
 USE=	usb
 
 include ../../toolchain/mchck.mk
