add DMA code for testing

--- a/examples/mclogic/Makefile
+++ b/examples/mclogic/Makefile
@@ -1,7 +1,11 @@
 PROG=	mclogic
 
 ifdef SIGROK
-CFLAGS+=	-DSIGROK
+CFLAGS+=	-DMCLOGIC_SIGROK
+endif
+
+ifdef DMA
+CFLAGS+=	-DMCLOGIC_DMA
 endif
 
 ifndef VUSB
