reverse result stream

--- a/examples/mclogic/ols.profile-mchck.cfg
+++ b/examples/mclogic/ols.profile-mchck.cfg
@@ -50,6 +50,6 @@ device.open.portdtr = false
 device.metadata.keys = "MCHCK 0.1"
 
 # In which order are samples sent back from the device? false = last sample first, true = first sample first
-device.samples.reverseOrder = false
+device.samples.reverseOrder = true
 
 ###EOF###
